# testament

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
src/: app.rs  cli.rs  config.rs  error.rs  main.rs
src/git/: mod.rs  pr.rs
src/model/: mod.rs  project.rs  test.rs
src/parser/: csharp.rs  mod.rs  trx.rs
src/runner/: discovery.rs  executor.rs  mod.rs  watcher.rs
src/ui/: layout.rs  mod.rs  output.rs  projects.rs  test_result.rs  tests.rs  theme.rs
