[package]
name = "testament"
version = "0.1.0"
edition = "2021"
description = "A TUI for discovering, running, and monitoring .NET tests"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
quick-xml = "0.37"
thiserror = "2"
