[package]
name = "testament"
version = "1.1.0"
edition = "2021"
description = "A TUI for discovering, running, and monitoring .NET tests"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
quick-xml = "0.37"
thiserror = "2"
notify = "7"
tree-sitter = "0.24"
tree-sitter-c-sharp = "0.23"
reqwest = { version = "0.12", features = ["blocking"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
